--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ h1 {
   font-size: 1.5rem;
 }
 
-.card{
+.card {
   background-color: white;
   color: #333;
   padding: 1rem;
@@ -59,6 +59,24 @@ h1 {
   cursor: grab;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.add-card-btn{
+  background-color: white;
+  font-weight: 600;
+  color: #333;
+  padding: 1rem;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.add-card-btn:active{
+  transform: scale(0.9);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
 .card:active{
