--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@ h1 {
   font-weight: 600;
   color: #333;
   padding: 1rem;
-  margin-bottom: 10px;
+  margin-top: -6px;
+  margin-bottom: 15px;
   border-radius: 8px;
   border: none;
   cursor: pointer;
